k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: market-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: 192.168.56.200.sslip.io
      http:
        paths:
        - path: /account
          pathType: Prefix
          backend:
            service:
              name: service-account
              port:
                number: 8661
        - path: /order
          pathType: Prefix
          backend:
            service:
              name: service-order
              port:
                number: 8662
        - path: /product
          pathType: Prefix
          backend:
            service:
              name: service-product
              port:
                number: 8663
---
